# VecDB

./: .gitignore  CMakeLists.txt  README.md  ingest_docs.py  load_test.py  next_plans.md  rag_chat.py  requirements.txt  test_database.vec  vecdb_client.py
benchmarks/: CMakeLists.txt  bench_core.cpp
docs/: hnsw_algorithm.md  vecdb_architecture.md
include/vecdb/: core.hpp
scripts/: generate_truth.py
src/: CMakeLists.txt  core.cpp  server.cpp
tests/: CMakeLists.txt  test_main.cpp
